Generalise input-range styling for all siders. Fixes #581 the disturbance of size sliders on firefox

--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -153,6 +153,43 @@
     position: absolute;
     z-index: 11;
   }
+    
+    
+
+  input[type=range]::-webkit-slider-runnable-track {
+      cursor: pointer;
+      background: transparent;
+  }
+  input[type=range]:focus::-webkit-slider-runnable-track {
+      background: transparent;
+  }
+  input[type=range]::-moz-range-track {
+      cursor: pointer;
+      background: transparent;
+  }
+  input[type=range]::-ms-track {
+      cursor: pointer;
+      background: transparent;
+      border-color: transparent;
+      border-width: 16px 0;
+      color: transparent;
+  }
+  input[type=range]::-ms-fill-lower {
+      background: transparent;
+  }
+  input[type=range]:focus::-ms-fill-lower {
+      background: transparent;
+  }
+  input[type=range]::-ms-fill-upper {
+      background: transparent;
+  }
+  input[type=range]:focus::-ms-fill-upper {
+      background: transparent;
+  }
+  input[type=range]::-moz-focus-outer {
+      border: 0;
+  }
+    
   //Data warning
   .vzb-data-warning {
     cursor: pointer;
